--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -1,54 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tailwind CSS Starter</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tailwind CSS Starter</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100..800&display=swap" rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            'jetbrains': ['JetBrains Mono', 'monospace'],
+          },
+        },
+      },
+    }
+  </script>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="text-white font-jetbrains bg-darkgrey">
 
-    <!-- Navbar -->
-    <nav class="bg-red-600 p-4 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="text-white text-xl font-bold">My Website</a>
-            <div>
-                <a href="#" class="text-white px-4">Home</a>
-                <a href="#" class="text-white px-4">About</a>
-                <a href="#" class="text-white px-4">Contact</a>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="text-center py-20 bg-blue-500 text-white">
-        <h1 class="text-4xl font-bold">Welcome to My Website</h1>
-        <p class="mt-4 text-lg">This is a simple Tailwind CSS example to get started.</p>
-        <a href="#" class="mt-6 inline-block bg-white text-blue-600 px-6 py-3 rounded-full shadow-md hover:bg-gray-200 transition">
-            Get Started
-        </a>
-    </section>
-
-    <!-- Card Section -->
-    <div class="container mx-auto mt-10 grid grid-cols-1 md:grid-cols-3 gap-6 p-6">
-        <div class="bg-white rounded-lg shadow-md p-6">
-            <h2 class="text-xl font-bold">Feature 1</h2>
-            <p class="mt-2 text-gray-600">This is a description of the first feature.</p>
-            <button class="mt-4 bg-pink-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Read More</button>
-        </div>
-
-        <div class="bg-white rounded-lg shadow-md p-6">
-            <h2 class="text-xl font-bold">Feature 2</h2>
-            <p class="mt-2 text-gray-600">This is a description of the second feature.</p>
-            <button class="mt-4 bg-yellow-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Read More</button>
-        </div>
-
-        <div class="bg-white rounded-lg shadow-md p-6">
-            <h2 class="text-xl font-bold">Feature 3</h2>
-            <p class="mt-2 text-gray-600">This is a description of the third feature.</p>
-            <button class="mt-4 bg-green-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Read More</button>
-        </div>
+  <!-- Navbar -->
+  <nav class="flex h-16 w-full border-b border-white">
+    <div class="flex items-center justify-center w-1/3 border-r border-white neontext">
+      <a href="index.html" class="px-4 py-2">Mikkel Hansen</a>
     </div>
 
+    <div class="flex items-center justify-evenly w-1/3 border-r border-white">
+      <a href="#" class="px-4 py-2 neon-hover">About</a>
+      <a href="#" class="px-4 py-2 neon-hover">Projects</a>
+    </div>
+
+    <div class="flex w-1/3 h-full">
+        <!-- Left side: Icons -->
+        <div class="flex items-center justify-evenly border-r border-white w-1/2 h-full">
+          <a href="#" class="p-5 svg-hover">
+            <!-- Twitter X -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-twitter-x" viewBox="0 0 16 16">
+              <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+            </svg>
+          </a>
+          <a href="#" class="p-5 svg-hover">
+            <!-- LinkedIn -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-linkedin" viewBox="0 0 16 16">
+              <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+            </svg>
+          </a>
+          <a href="#" class="p-5 svg-hover">
+            <!-- GitHub -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-github" viewBox="0 0 16 16">
+              <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+            </svg>
+          </a>
+        </div>
+      
+        <!-- Right side: Contact -->
+        <div class="w-1/2 h-full flex justify-center items-center">
+          <a href="index.html" class="px-4 py-2 neon-hover">Contact</a>
+        </div>
+      </div>
+  </nav>
+
+  <!-- Main Section -->
+  <section class="flex flex-col grow p-0 w-screen" style="height: calc(100vh - 60px);">
+    <div class="flex flex-wrap w-full h-full m-0 p-0">
+
+      <!-- Left Column -->
+      <div class="flex flex-col flex-grow w-full md:w-2/3">
+
+        <!-- Carousel Container -->
+        <div id="carousel-container" class="flex-grow border-t border-r border-white overflow-hidden min-h-0 max-h-2/3 flex-1">
+          <img src="images/mig.webp" class="carousel-image active w-full h-full object-cover" alt="Slide 1">
+          <img src="images/Smart-choice.webp" class="carousel-image hidden w-full h-full object-cover" alt="Slide 2">
+          <img src="images/Aiden.webp" class="carousel-image hidden w-full h-full object-cover" alt="Slide 3">
+        </div>
+
+        <!-- Carousel Title -->
+        <div class="border-t border-r border-white pt-2 pl-3 h-1/3 overflow-hidden">
+            <p id="carousel-title" class="text-2xl font-bold">
+              Multimediedesigner & Webudvikling studerende
+            </p>
+          </div>
+      </div>
+
+      <!-- Right Column -->
+      <div class="flex flex-col flex-grow w-full md:w-1/3">
+
+        <!-- Description -->
+        <div class="border-white pt-2 pl-3 flex-grow min-h-0 max-h-2/3 flex-1 overflow-hidden">
+          <p id="carousel-description" class="text-lg">
+            Jeg er en passioneret multimediedesigner og webudvikler med fokus på UX/UI-design og kodning. <br><br>
+            Med erfaring i:<br>HTML<br>CSS<br>Vue3<br>Photoshop<br>After effects<br><br>
+            jeg skaber intuitive og brugervenlige digitale løsninger.
+          </p>
+        </div>
+
+        <!-- Buttons -->
+        <div class="flex border-t border-white h-1/3 overflow-hidden">
+            <button id="prev-btn" class="w-1/2 h-full custom-btn flex justify-center items-center border-r border-white">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30%" height="25%" class="svg-hover fill-white">
+                  <path d="M10.78 19.03a.75.75 0 0 1-1.06 0l-6.25-6.25a.75.75 0 0 1 0-1.06l6.25-6.25a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L5.81 11.5h14.44a.75.75 0 0 1 0 1.5H5.81l4.97 4.97a.75.75 0 0 1 0 1.06Z"/>
+                </svg>
+              </button>
+              
+              <button id="next-btn" class="w-1/2 h-full custom-btn flex justify-center items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30%" height="25%" class="svg-hover fill-white">
+                  <path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.749.749 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0Z"/>
+                </svg>
+              </button>
+          </div>
+      </div>
+
+    </div>
+  </section>
+
+  <script>
+    let currentIndex = 0;
+    const images = document.querySelectorAll(".carousel-image");
+    const titles = [
+      "Multimediedesigner & Webudvikling studerende",
+      "Smart choice - Interactive learning app",
+      "AIDEN - automates and personalizes customer service emails seamlessly"
+    ];
+    const descriptions = [
+      `Jeg er en passioneret multimediedesigner og webudvikler med fokus på UX/UI-design og kodning. <br> <br> Med erfaring i:<br>HTML<br>CSS<br>Vue3<br>Photoshop<br>After effects<br><br>jeg skaber intuitive og brugervenlige digitale løsninger.`,
+      `Smart Choice is a web app designed to educate teenagers (15-18 years old) about digital sustainability through interactive quizzes.<br> <br> Built with Vue 3 and Firebase, the app features two game modes:<br> <br> Swipe Quiz – Users swipe between two choices to pick the most sustainable option.<br><br> Multiple-Choice Quiz – Tests knowledge gained from the swipe quiz.<br>`,
+      `Brand Identity:<br>Created AIDEN’s name, logo, and visual style.<br><br>User-Centered Design:<br>Researched, interviewed, and tested for optimal UX.<br><br>Website Development:<br>Built a responsive page with AI messaging and subscriptions.`
+    ];
+
+    document.getElementById("next-btn").addEventListener("click", () => changeSlide(1));
+    document.getElementById("prev-btn").addEventListener("click", () => changeSlide(-1));
+
+    function changeSlide(direction) {
+      images[currentIndex].classList.add("hidden");
+      images[currentIndex].classList.remove("active");
+      currentIndex = (currentIndex + direction + images.length) % images.length;
+      images[currentIndex].classList.remove("hidden");
+      images[currentIndex].classList.add("active");
+      document.getElementById("carousel-title").innerHTML = titles[currentIndex];
+      document.getElementById("carousel-description").innerHTML = descriptions[currentIndex];
+    }
+  </script>
 </body>
 </html>
