--- a/Tailwind/index.html
+++ b/Tailwind/index.html
@@ -14,12 +14,15 @@
           fontFamily: {
             'jetbrains': ['JetBrains Mono', 'monospace'],
           },
+          colors: {
+            darkgray: '#212121',
+          },
         },
       },
     }
   </script>
 </head>
-<body class="text-white font-jetbrains bg-darkgrey">
+<body class="text-white font-jetbrains bg-darkgray">
 
   <!-- Navbar -->
   <nav class="flex h-16 w-full border-b border-white">
